[workspace]
members = ["tvm-engine", "tvm-engine-types", "tvm-engine-precompiles"]

[workspace.package]
version = "0.1.0-alpha"
edition = "2021"
authors = ["Charles.liu"]
description = "Virtual Machine Engine for TOP-Chain"
rust-version = "1.66"

[workspace.dependencies]
primitive-types = { version = "0.12.1" }
hex = { version = "0.4.3" }
tvm-engine-precompiles = { version = "0.1.0-alpha", path = "./tvm-engine-precompiles" }
tvm-engine-types = { version = "0.1.0-alpha", path = "./tvm-engine-types" }
evm = { version = "0.37.0" }
sha3 = { version = "0.10.6" }
libsecp256k1 = { version = "0.7.1" }
