[workspace]
members = [
    "tvm-engine",
    "tvm-engine-types",
    "tvm-engine-precompiles",
    "tvm-engine-runtime",
]

[workspace.package]
version = "0.1.0-beta"
edition = "2021"
authors = ["Charles.liu"]
description = "Virtual Machine Engine for TOP-Chain"
rust-version = "1.66"

[workspace.dependencies]
primitive-types = { version = "0.12.1" }
hex = { version = "0.4.3" }
tvm-engine-precompiles = { version = "0.1.0-beta", path = "./tvm-engine-precompiles" }
tvm-engine-types = { version = "0.1.0-beta", path = "./tvm-engine-types" }
tvm-engine-runtime = { version = "0.1.0-beta", path = "./tvm-engine-runtime" }
evm = { version = "0.39.0" }
sha2 = { version = "0.10.6", default-features = false }
sha3 = { version = "0.10.6", default-features = false }
ripemd = { version = "0.1.3", default-features = false }
libsecp256k1 = { version = "0.7.1" }
protobuf = { version = "3.2.0" }
xxhash-rust = { version = "0.8.6" }
num = { version = "0.4.0", default-features = false, features = ["alloc"] }
zeropool-bn = { version = "0.5.11", default-features = false }
