[package]
name = "tvm-engine-precompiles"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tvm-engine-types = { workspace = true }
evm = { workspace = true }
sha2 = { workspace = true, default-features = false }
sha3 = { workspace = true, default-features = false }
ripemd = { workspace = true, default-features = false }
libsecp256k1 = { workspace = true }
num = { workspace = true, default-features = false, features = ["alloc"] }
zeropool-bn = { workspace = true, default-features = false }

[dev-dependencies]
hex = { workspace = true }
