[package]
name = "tvm-engine-runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = { workspace = true, default-features = false }
tvm-engine-types = { workspace = true }
