[package]
name = "tvm-engine-runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cc = "1.0.79"

[dependencies]
sha2 = { workspace = true, default-features = false }
sha3 = { workspace = true, default-features = false }
tvm-engine-types = { workspace = true }

[features]
build_as_xtop_lib = []