[package]
name = "tvm-engine-types"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
primitive-types = { workspace = true }
hex = { workspace = true }
protobuf = { workspace = true }
xxhash-rust = { workspace = true, features = ["xxh64", "const_xxh64"] }


[dev-dependencies]
