[package]
name = "tvm-engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]

[dependencies]
tvm-engine-precompiles = { workspace = true }
tvm-engine-types = { workspace = true }
tvm-engine-runtime = { workspace = true }
evm = { workspace = true }
protobuf = { workspace = true }
